@@ -1,0 +1,5 @@
+build-stamp
+debian/stunnel4.init
+doc/stunnel4.8
+doc/stunnel4.fr.8
+doc/stunnel4.pl.8
