@@ -1,0 +1,1 @@
+debian/StunnelConf-0.1.pl usr/share/doc/stunnel4/contrib
